summative.moria.Moria.scala.error
Erreur de compilation :
Moria:7: error: ';' expected but ')' found.
var x:Int=0; var y:Int=0; x=getX(); y=getY())} 
                                            ^